--- a/CSS Flexbox e layouts responsivos/aula-1/aluraPlay/css/flexbox.css
+++ b/CSS Flexbox e layouts responsivos/aula-1/aluraPlay/css/flexbox.css
@@ -39,6 +39,37 @@
   margin-right: 0;
 } */
 
+/* LATERAL ==> ASIDE */
+
+.menu__container {
+  position: fixed;
+  width: 100%;
+  height: 74px;
+  bottom: 0%;
+}
+
+.menu__lista {
+  display: flex;
+  justify-content: space-around;
+  height: 100%;
+}
+
+.menu__lista li {
+  align-self: center; /*propriedade exclusiva do item*/
+}
+
+.menu__lista:nth-child(2),
+.menu__lista:nth-child(3),
+.menu__lista:nth-child(4) {
+  display: none;
+}
+
+.menu__itens {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
 @media (min-width: 834px) {
   /* CABEÇALHO */
 
@@ -49,5 +80,33 @@
 
   .rodape__container {
     justify-content: space-between;
+  }
+
+  .menu__container {
+    left: 0;
+    height: auto;
+    width: 74px;
+    top: 80px;
+  }
+  .menu__lista {
+    flex-direction: column;
+    justify-content: flex-start;
+    padding-top: 15px;
+    gap: 33px;
+  }
+}
+@media (min-width: 1440px) {
+  .menu__container {
+    width: 239px;
+    overflow: scroll;
+  }
+  .menu__lista:nth-child(2),
+  .menu__lista:nth-child(3),
+  .menu__lista:nth-child(4) {
+    display: flex;
+  }
+  .menu__lista {
+    height: auto;
+    padding: 20px 17px 20px 15px;
   }
 }
