--- a/CSS Flexbox e layouts responsivos/aula-1/aluraPlay/css/flexbox.css
+++ b/CSS Flexbox e layouts responsivos/aula-1/aluraPlay/css/flexbox.css
@@ -70,6 +70,37 @@
   gap: 5px;
 }
 
+/*VÍDEOS*/
+.videos__item {
+  height: 303px;
+  width: 280px;
+}
+
+.descricao-video {
+  margin-top: 1rem;
+  display: grid;
+  text-align: start;
+  column-gap: 1rem;
+  row-gap: 10px;
+  grid-template-columns: auto 1fr;
+}
+
+.descricao-video img {
+  grid-area: 1 / 1 / 3 / 2;
+}
+
+.descricao-video h3 {
+  grid-area: 1 / 2 / 2 / 3;
+  font-weight: 700;
+  color: #444444;
+}
+
+.descricao-video p {
+  grid-area: 2 / 2 / 3 / 3;
+  font-size: 14px;
+  color: #444444;
+}
+
 @media (min-width: 834px) {
   /* CABEÇALHO */
 
@@ -108,5 +139,31 @@
   .menu__lista {
     height: auto;
     padding: 20px 17px 20px 15px;
+    gap: 15px;
   }
+  .menu__itens {
+    flex-direction: row;
+    gap: 15px;
+    align-items: center;
+  }
+
+  .menu__lista:nth-child(3) {
+    flex-direction: column-reverse;
+  }
+
+  /* .jogos {   ESSA ORDEM NÃO SE APRESENTA EM TODAS AS TELAS...POIS OBEDECE A ORDEM DO HTML
+  order: 3;
+}
+
+.filmes {
+  order: 2;
+}
+
+.premium {
+  order: 1;
+}
+
+.maispagina {
+  order: 4;
+} */
 }
