--- a/CSS Flexbox e layouts responsivos/aula-1/aluraPlay/css/flexbox.css
+++ b/CSS Flexbox e layouts responsivos/aula-1/aluraPlay/css/flexbox.css
@@ -71,9 +71,17 @@
 }
 
 /*VÍDEOS*/
+.videos__container{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+
 .videos__item {
   height: 303px;
   width: 280px;
+  flex-grow: 1;
 }
 
 .descricao-video {
